# dci-module-ppn-connectivity-joining

./: CMakeLists.txt
idl/ppn/connectivity/: joining.idl
src/: entry.cpp  joining.cpp  joining.hpp  pch.hpp
src/joining/: instance.cpp  instance.hpp
